Add JWT authentication

--- a/snaptest/src/main/resources/application.properties
+++ b/snaptest/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=snaptest
+spring.security.user.name=admin
+spring.security.user.password=admin123
+app.auth.username=admin
+app.auth.password=admin123
+logging.level.org.springframework=DEBUG
+logging.level.com.snaptest=DEBUG
+jwt.secret=7k1IfqCU8XYqcEUBdcJXXE5c4N4SIOfSJiJnzrCk0bA=
